--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,8 @@
     text-align: center;
     margin-top: 50px;
 }
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
