--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 #app{
     font-family: Arial, sans-serif;
     text-align: center;
