--- a/public/style.css
+++ b/public/style.css
@@ -3,13 +3,19 @@
     margin: 0;
     padding: 0;
 }
+
 #app{
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 50px;
 }
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#game{
+    border: 5px solid black;
 }
