--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ body{
     font-weight: 900;
     font-size: 30px;
 }
-.current-balls-count{
+.inner-count{
     position: absolute;
     bottom: 0px;
     right: 1px;
